<resources>
    <string name="app_name">AstroWeather</string>

    <string name="SUN">Sun</string>
    <string name="MOON">Moon</string>
    <string name="SETTINGS">Settings</string>
    <string name="LATITUDE">Latitude: </string>
    <string name="LONGITUDE">Longitude: </string>
    <string name="SUNRISE">Sunrise: </string>
    <string name="AZIMUTH_RISE">Azimuth Rise: </string>
    <string name="SUNSET">Sunset: </string>
    <string name="AZIMUTH_SET">Azimuth Set: </string>
    <string name="TWILIGHT_EVENING">Twilight Evening: </string>
    <string name="TWILIGHT_MORNING">Twilight Morning: </string>
    <string name="NEW_MOON">New Moon: </string>
    <string name="FULL_MOON">Full Moon: </string>
    <string name="LUNAR_PHASE">Lunar Phase: </string>
    <string name="DAY_MONTH_LUNAR">Day Month Lunar: </string>
    <string name="MOONRISE">Moonrise: </string>
    <string name="MOONSET">Moonset: </string>
    <string name="REFRESH_ASTRO">Refresh Astro</string>
    <string name="SAVE">Save</string>

    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="settings">Settings</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="location_permission_needed">Device location is needed for Weather GeoLocation</string>
    <string name="disable_geolocation">Change Settings</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="pressure">Pressure</string>
    <string name="description">Description</string>
    <string name="speed">Speed</string>
    <string name="direction">Direction</string>
    <string name="humidity">humidity</string>
    <string name="visibility">visibility</string>
    <string name="pref_custom">customPref</string>
    <string name="current_location">Current Location:</string>
    <string name="favourites">Favourites</string>
    <string name="localization">Localization:</string>
    <string name="add">Add</string>

</resources>
