<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.arek.astroweather.fragments.ForecastFragment">

    <ImageView
        android:id="@+id/weatherIconImageView"
        android:layout_width="136dp"
        android:layout_height="83dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/condition_icon"
        app:srcCompat="@drawable/icon_na" />

    <TextView
        android:id="@+id/descriptionTextView"
        style="@style/TextColor"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationTextView"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/description"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/light_text"
        tools:layout_marginTop="10dp" />


    <TextView
        android:id="@+id/locationTextView"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/weatherIconImageView"
        android:layout_centerHorizontal="true"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/light_text" />


    <TextView
        android:id="@+id/highTemperatureTextView"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/high"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/light_text" />

    <TextView
        android:id="@+id/lowTemperatureTextView"
        style="@style/TextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highTemperatureTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/low"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <TextView
        android:id="@+id/longitudeTextView"
        style="@style/TextColor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lowTemperatureTextView"
        android:layout_marginBottom="10dp"
        android:text="@string/LONGITUDE"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/latitudeTextView"
        style="@style/TextColor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/longitudeTextView"
        android:text="@string/LATITUDE"
        android:textAppearance="?android:attr/textAppearanceSmall" />


    <TextView
        android:id="@+id/pressureTextView"
        style="@style/TextColor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeTextView"
        android:layout_marginTop="10dp"
        android:text="@string/pressure"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:layout_marginBottom="10dp" />


    <TextView
        android:id="@+id/speedTextView"
        style="@style/TextColor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/pressureTextView"
        android:text="@string/speed"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/directionTextView"
        style="@style/TextColor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/speedTextView"
        android:layout_marginTop="10dp"
        android:text="@string/direction"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/humidityTextView"
        style="@style/TextColor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/directionTextView"
        android:text="@string/humidity"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/visibilityTextView"
        style="@style/TextColor"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/humidityTextView"
        android:layout_marginTop="10dp"
        android:text="@string/visibility"
        android:textAppearance="?android:attr/textAppearanceSmall" />


</RelativeLayout>
